# AI-Agent-Hackathon-x-DEG

./: .gitignore  GITHUB_VIDEO_GUIDE.md  PROBLEM_STATEMENT_ANALYSIS.md  README.md  SETUP.md  SUBMISSION_FORM.md  test_agent.py
backend/: agent_service.py  beckn_bap.py  beckn_models.py  beckn_service.py  main.py  mock_bpp.py  pyproject.toml  requirements.txt  risk_engine.py  utils.py  weather.py
data/: assets.json  scenarios.json
docs/: API_CONTRACTS.md  CURRENT_STEPS.md  DAY1_CHECKLIST.md  NEXT_STEPS.md  PROJECT_STRUCTURE.md  QUICK_START.md
documents/: problem_statement.md
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  index.css
frontend/src/components/: BecknLog.css  BecknLog.js  LoadingSpinner.css  MapView.css  MapView.js  RiskPanel.css  RiskPanel.js  ScenarioPanel.css  ScenarioPanel.js
