[project]
name = "backend"
version = "0.1.0"
description = "Extreme Weather Resilience Agent Backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "pydantic==2.5.0",
    "python-multipart==0.0.6",
    "httpx==0.25.1",
    "python-dotenv==1.0.0",
    "openai==1.3.0",
    "anthropic==0.7.0",
    "requests==2.31.0",
    "pandas==2.1.3",
    "numpy==1.26.2",
    "google-generativeai>=0.8.5",
]
